--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading"></h1>
-    <div class="game-area">
+    <h1 class="heading">
         <img class="logo" src="assets/images/logo.png" alt="logo"> Love Maths
+    </h1>
+    <div class="game-area">
+        
 
     </div>
     <div class="score-area">
