--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             </button>
         </div>
 
+        <div class="question-area">
+            <span id="operand1">0</span>
+            <span id="operator">x</span>
+            <span id="operand2">0</span>
+            <span>=</span>
+            <p class="answer-message">Enter Answer:</p>
+        </div>
+
     </div>
     <div class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
