Continuing work of html structure

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <span id="operand2">0</span>
             <span>=</span>
             <p class="answer-message">Enter Answer:</p>
+            <input id= "answer-box" type="text">
         </div>
+        <button class="btn btn--gray">Submit Answer</button>
 
     </div>
     <div class="score-area">
